Removed some videos from media folder, added flexbox CSS for better side-by-side image alignment, added bottom padding CSS to further improve image alignment, added unfinished description of what Super Smash Bros. is in "WhatIsSmash.html", fixed an unfixed link spelling error I missed in "WhatIsSmash.html", added Smash Bros. trailers as YouTube windows in "WhatIsSmash.html", added a small Smash Ball in the background of "WhatIsSmash.html", added the Sonic Mania intro with video editing done with Microsoft Clipchamp to add fade in transition and cut out the game logo and company logos, putting this as a background in "AboutSonic.html", added a competitive Smash tournament set YouTube video to "Competitive.html"

--- a/main.css
+++ b/main.css
@@ -213,5 +213,41 @@ body, html {
 }
 
 .ImageGap {
-    padding-right: 39%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+.MiniImageBackground {
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    filter: brightness(0.5);
+    position: fixed;
+    z-index: -1;
+    overflow: auto;
+}
+
+.YouTubeWindow {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    background: #000;
+}
+
+.iframeSize {
+    width: 30%;
+    max-width: 640px;
+    height: 360px;
+    border: 0px;
+}
+
+.BottomPadding {
+    padding-bottom: 20px;
 }
